--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <div class="corpo">
             <div class="formulario">
-            <form>
+            <form id="form-registre">
                     <h2>Registre-se:</h2>
                     <input id="contato_telefone" type="text" placeholder="Digite o seu nome:" required>
                     <input id="numero_telefone" type="tel" placeholder="Seu número de telefone:" required>
@@ -39,7 +39,7 @@
                 </tfoot>
             </table>
         </div>
-        </div>
+    </div>
     <script src="./main.js"></script>
 </body>
 </html>
