--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                     <input id="contato_telefone" type="text" placeholder="Digite o seu nome:" required>
                     <input id="numero_telefone" type="tel" placeholder="Seu número de telefone:" required>
                         <button type="submit">Enviar</button>
-                        <button type="reset">Limpar</button>
                 </form>
             </div>
         <div class="tabela">
@@ -33,8 +32,8 @@
                 <tbody></tbody>
                 <tfoot>
                     <tr>
-                        <td>Contatos cadastrados</td>
-                        <td>0</td>
+                        <td id="contato_cadastrado">Contatos cadastrados:</td>
+                        <td id="numero_cadastrado">Numeros Adicionados </td>
                     </tr>
                 </tfoot>
             </table>
